platform/gitops/components/secrets/external-secrets/helm/patch-vpa-requests-deployment-external-secrets-cert-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-secrets-cert-controller
  namespace: external-secrets
spec:
  template:
    spec:
      containers:
        - name: cert-controller
          resources:
            requests:
              cpu: "15m"
              memory: "80Mi"
            limits:
              memory: "120Mi"
