platform/gitops/components/secrets/external-secrets/helm/patch-vpa-requests-deployment-external-secrets-webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-secrets-webhook
  namespace: external-secrets
spec:
  template:
    spec:
      containers:
        - name: webhook
          resources:
            requests:
              cpu: "15m"
              memory: "64Mi"
            limits:
              memory: "96Mi"
