platform/gitops/components/secrets/external-secrets/helm/patch-vpa-requests-deployment-external-secrets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-secrets
  namespace: external-secrets
spec:
  template:
    spec:
      containers:
        - name: external-secrets
          resources:
            requests:
              cpu: "15m"
              memory: "80Mi"
            limits:
              memory: "120Mi"
